--- a/main_panel.html
+++ b/main_panel.html
@@ -100,6 +100,12 @@
           </div>
         </div>
         <div class="row">
+          <div class="col-3">Created On:</div>
+          <div class="col-9">
+            <input id="current_domain_con" type="text" />
+          </div>
+        </div>
+        <div class="row">
           <div class="col-3">Registrar:</div>
           <div class="col-9">
             <input id="current_domain_registrar" type="text" />
@@ -117,6 +123,7 @@
             <input id="current_domain_country" type="text" />
           </div>
         </div>
+        <hr/>
       </div>
     </div>
     <script src="main_panel.js"></script>
