--- a/main_panel.html
+++ b/main_panel.html
@@ -69,9 +69,15 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-3">URL Intel Result:</div>
+          <div class="col-3">URL Intel Score:</div>
           <div class="col-9">
-            <input id="current_url_result" type="text" />
+            <input id="current_url_score" type="text" />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-3">URL Intel Verdict:</div>
+          <div class="col-9">
+            <input id="current_url_verdict" type="text" />
           </div>
         </div>
         <hr />
@@ -92,13 +98,7 @@
           <div class="col-9">
             <input id="current_domain_status" type="text" />
           </div>
-        </div>
-        <div class="row">
-          <div class="col-3">Domain Intel Result:</div>
-          <div class="col-9">
-            <input id="current_domain_result" type="text" />
-          </div>
-        </div>
+        </div>        
         <div class="row">
           <div class="col-3">Created On:</div>
           <div class="col-9">
@@ -123,7 +123,19 @@
             <input id="current_domain_country" type="text" />
           </div>
         </div>
-        <hr/>
+        <div class="row">
+            <div class="col-3">Domain Intel Score:</div>
+            <div class="col-9">
+              <input id="current_domain_score" type="text" />
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-3">Domain Intel Verdict:</div>
+            <div class="col-9">
+              <input id="current_domain_verdict" type="text" />
+            </div>
+          </div>
+        <hr />
       </div>
     </div>
     <script src="main_panel.js"></script>
