--- a/main_panel.html
+++ b/main_panel.html
@@ -1,6 +1,6 @@
 <html lang="en">
   <head>
-    <meta name="color-scheme" content="light dark" />
+    <meta name="color-scheme" content="dark" />
     <link href="lib/simplegrid.css" rel="stylesheet" />
     <style>
       h3 {
